--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,3 +1,18 @@
 .navbarContainer {
-  background-color: silver;
+  margin: 5px;
+  font-size: 1.5rem;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  gap: 10px;
+  align-items: center;
+  border-bottom: 2px solid rgb(97, 96, 96);
+}
+.listaNavBar { list-style: none;
+  display: flex;
+  flex-direction: inline;
+  gap: 10px;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 10vh;
 }
