--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -3,12 +3,14 @@
   font-size: 1.5rem;
   display: flex;
   width: 100%;
+  height: 10vh;
   justify-content: space-between;
   gap: 10px;
   align-items: center;
   border-bottom: 2px solid rgb(97, 96, 96);
 }
-.listaNavBar { list-style: none;
+.listaNavBar {
+  list-style: none;
   display: flex;
   flex-direction: inline;
   gap: 10px;
