--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,12 @@
-.footerContainer {
-  color: white;
+.footerContainer {  
   width: 100%;
   margin: 5px;
-  border-top: 2px solid rgb(97, 96, 96);
+  border-top: 2px solid #283048;
+  display: flex;
+  flex-direction: inline;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  padding: 10px;
+  color: #FFFFFF;
 }
