--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footerContainer {  
   width: 100%;
   margin: 5px;
-  border-top: 2px solid #283048;
+  border-top: 2px solid #373f57;
   display: flex;
   flex-direction: inline;
   align-items: center;
