--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,20 +1,18 @@
 .navbarContainer {
-  margin: 5px;
   font-size: 1.5rem;
   display: flex;
   width: 100%;
   height: 10vh;
-  justify-content: space-between;
-  gap: 10px;
+  justify-content:space-around;
   align-items: center;
-  border-bottom: 2px solid #283048;
+  border-bottom: 2px solid #373f57;
 }
 .listaNavBar {
   list-style: none;
   display: flex;
   flex-direction: inline;
-  gap: 10px;
-  justify-content: space-between;
+  gap: 20px;
+  justify-content: center;
   align-items: center;
   min-height: 10vh;
 }
