--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,19 @@
 * {
-  
   padding: 0;
   box-sizing: border-box;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
 body {
-  color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
+  background-image: linear-gradient(to bottom right, #242424, #283048, #242424);
+  color: rgba(255, 255, 255, 0.87);
   margin: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 
 h1 {
   font-size: 3rem;
 }
-
