--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
-.footerContainer {  
+.footerContainer {
   width: 100%;
-  margin: 5px;
+  margin: 20px;
   border-top: 2px solid #373f57;
   display: flex;
   flex-direction: inline;
@@ -8,5 +8,5 @@
   justify-content: center;
   gap: 20px;
   padding: 10px;
-  color: #FFFFFF;
+  color: #ffffff;
 }
