--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -3,9 +3,11 @@
   display: flex;
   width: 100%;
   height: 10vh;
-  justify-content:space-around;
+  justify-content: space-around;
   align-items: center;
   border-bottom: 2px solid #373f57;
+  margin: 20px;
+  
 }
 .listaNavBar {
   list-style: none;
