--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -11,8 +11,8 @@
   list-style: none;
   display: flex;
   flex-direction: inline;
-  gap: 20px;
-  justify-content: center;
+  gap: 30px;
+  justify-content: space-between;
   align-items: center;
   min-height: 10vh;
 }
